# halo

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  Config.cmake.in  HaloConfig.h.in  QUESTIONS.txt  README.md  TC-i86.cmake  TODO.txt  basic.c  bit_map_ideas.txt  bochsrc  boot_sect.asm  cmake-build.sh  cmake_ideas.txt  cmd_line_ideas.txt  coms_handler_ideas.txt  debug.txt  greeting.tmp  icmp_implementation_ideas.txt  idt_setup_layout.txt  keyboard.c  keyboard.h  linker-script  multiboot_ideas  nic_driver_ideas.txt  numbers.c  numbers.h  os-image  pci_init_notes.txt  pic_irq_assignment_handling.txt  receive_buffer_ideas.txt  starting_CMakeLists.txt  test_ideas.txt  timer_logic.txt
source/: CMakeLists.txt
source/boot/: CMakeLists.txt  README.md  basic_gdt.asm  boot_sect_kernel_bootstrap.asm  boot_sector.asm  constants.asm  disk_load.asm  get_memory_size.asm  kernel_entry.asm  kernel_phys_addr.asm  memory_map.asm  memory_size.asm  multiboot2.asm  multiboot_info.asm  switch_to_pm.asm
source/boot/pm/: print_string_pm.asm  switch_to_pm.asm
source/boot/protected-mode/: gdt.asm
source/boot/utilities/: disk_load.asm  print_hex_real_mode.asm  print_string.asm  print_string_pm.asm  print_string_rm.asm
source/boot/utils/: CMakeLists.txt  print_hex_rm.asm  print_string_pm.asm  print_string_rm.asm
source/kernel/: CMakeLists.txt  README.md  boot.h  elf.c  gdt.c  gdt.h  greeting.c  idt.c  idt.h  process.c  process.h  start.c  temp.txt
source/kernel/cmd-line/: CMakeLists.txt  cmd_line.c  cmd_line.h  main.c
source/kernel/dp8390-nic/: driver_isr.asm  registers.asm
source/kernel/drivers/: CMakeLists.txt  README.md  keyboard.c  keyboard.h  pci.c  pci.h  pic.c  pic.h  pit.c  pit.h  screen.c  screen.h  vesa_display.c
source/kernel/drivers/8259a-pic/: CMakeLists.txt  functionality.c  functionality.h  pic.c  pic.h  ports.h
source/kernel/drivers/dp8390-nic/: CMakeLists.txt  check_queue.asm  device_information.h  driver_isr.asm  functions.c  functions.h  handle_received_packet.c  host_to_nic.asm  initialize_driver.asm  nic_to_host.asm  nic_to_pc.asm  notifications.c  notifications.h  packets.c  pc_to_nic.asm  registers.asm  send_driver.asm  send_or_queue_packet.asm  transmit_next_packet_in_queue.asm
source/kernel/drivers/ns16550a-uart/: CMakeLists.txt  buffer.h  functionality.h  initialization.asm  interrupt_handler.c  interrupt_handler.h  message.c  message.h  registers.asm
source/kernel/drivers/ns16550a-uart/test/: CMakeLists.txt  message_test.c
source/kernel/drivers/pci/: functions.c  pci.c
source/kernel/drivers/pit/: CMakeLists.txt  pit.c
source/kernel/drivers/pit/test/: all.c
source/kernel/drivers/vesa-display/: CMakeLists.txt  vesa_display.c  vesa_display.h  video_buffer.c  video_buffer.h
source/kernel/drivers/vesa-display/test/: CMakeLists.txt  vesa_display_test.c
source/kernel/interrupts/: CMakeLists.txt  handler_entry.asm  idt.c  idt.h  interrupt_handlers.asm  predefined_interrupt_loading.c  predefined_interrupt_loading.h  vector_handler_external_declarations.h
source/kernel/interrupts/predefined/: CMakeLists.txt  ia_32_core_handlers.c  ia_32_core_handlers.h  interrupt_handlers.asm  predefined_interrupt_loading.c
source/kernel/interrupts/test/: CMakeLists.txt  idt_test.c
source/kernel/memory/: CMakeLists.txt  boot.h  constants.h  manager.c  manager.h  phys_mem_mgr.c  phys_mem_mgr.h  physical_mem.c  physical_mem.h
source/kernel/memory/physical/: CMakeLists.txt  load_pdbr.asm  physical_mem.c  physical_mem.h
source/kernel/memory/physical/test/: CMakeLists.txt  physical_mem_test.c
source/kernel/memory/test/: CMakeLists.txt  manager_test.c  physical_mem_test.c  virtual_mem_test.c
source/kernel/memory/virtual/: CMakeLists.txt  flush_tlb_entry.asm  load_pdbr.asm  manager.c  manager.h  pde.c  pde.h  pte.c  pte.h  virtual_mem_mgr.c  virtual_mem_mgr.h
source/kernel/memory/virtual/pde/: CMakeLists.txt  get_pt_base_addr.c  get_pt_base_addr.h  pde.c  pde.h
source/kernel/memory/virtual/pde/test/: CMakeLists.txt  get_pt_base_addr_test.c  pde_test.c
source/kernel/memory/virtual/test/: CMakeLists.txt  cmocka_test_basic.c  manager_test.c  pde_test.c  pte_test.c  virtual_mem_mgr_test.c
source/kernel/networking/: CMakeLists.txt  mac.h  packets.c  udp.c
source/kernel/networking/ip-v6/: CMakeLists.txt  README.md  address.c  address.h  addresses.c  addressing.c  addressing.h  functionality.c  icmp_v6.c  icmp_v6.h  icmp_v6_test.c  message_transmission.c  message_transmission.h  neighbor_discovery_message_options.c  neighbor_solicitation.c  router_solicitation.c  stateless_address_autoconfiguration.c  stateless_address_autoconfiguration.h
source/kernel/networking/ip-v6/extension-headers/: CMakeLists.txt
source/kernel/networking/ip-v6/neighbor-discovery/: CMakeLists.txt  functionality.c  neighbor_solicitation.c  neighbor_solicitation.h  router_solicitation.c  router_solicitation.h
source/kernel/networking/ip-v6/neighbor-discovery/options/: CMakeLists.txt  (+10 more)
source/kernel/networking/ip-v6/test/: CMakeLists.txt  address_test.c  addresses_test.c  addressing_test.c
source/kernel/networking/ip-v6/trial/: addresses.c  addresses.h  addresses_test.c
source/kernel/networking/mac/: CMakeLists.txt  functionality.c  functionality.h
source/kernel/physical-memory/: boot.h  manager.c  manager.h
source/kernel/physical-memory-management/: CMakeLists.txt  README.md  manager.c  manager.h
source/kernel/physical-memory/test/: CMakeLists.txt  manager_test.c
source/kernel/process/: CMakeLists.txt  process.c  process.h
source/kernel/process/test/: CMakeLists.txt  process_test.c
source/kernel/test/: CMakeLists.txt  elf_test.c  process_test.c
source/kernel/utils/: CMakeLists.txt  call_function_at_address.asm  call_function_at_address.h  clock.c  clock.h  errors.c  errors.h  io.c  low_level.c  low_level.h  memory.c  memory.h  random.h  standard.c  standard.h  string.c  string.h
source/kernel/utils/test/: errors_test.c
source/user-space/: CMakeLists.txt
source/user-space/cmd-line/: CMakeLists.txt  README.md  cmd_line.c
source/user-space/programs/: CMakeLists.txt
(+32 files in other folders)
